SpringSecurity - 회원가입 비밀번호 암호화

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.nimbusds:nimbus-jose-jwt:9.31'
+    implementation "org.springframework.boot:spring-boot-starter-security"
 }
 
 tasks.named('test') {
